--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,7 @@
 $percent: 100;
 
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: "Ubuntu", Arial, sans-serif;
@@ -117,6 +118,92 @@ body {
             &:nth-child(2) {
                 stroke-dashoffset: calc(440 - (440 * 50) / 100);
                 stroke: #e021c0;
+            }
+        }
+    }
+}
+
+// =========================================================================
+.progressbar2 {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+
+    &__container {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 300px;
+        height: 300px;
+        border-radius: 50%;
+        border: 1px solid rgb(122, 122, 122);
+        background: transparent;
+        cursor: pointer;
+        overflow: hidden;
+        transition: 0.5s ease;
+    }
+
+    &__content {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        background-color: transparent;
+        z-index: 1;
+    }
+
+    &__number {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+
+        h2 {
+            color: #52ac3c9f;
+            font-size: 44px;
+            transition: 0.5s ease;
+        }
+    }
+
+    svg {
+        position: relative;
+        width: 200px;
+        height: 200px;
+        transform: rotate(-90deg);
+
+        circle {
+            width: 100%;
+            height: 100%;
+            fill: none;
+            stroke: #317fb3;
+            stroke-width: 10;
+            stroke-linecap: round;
+            // transform: translate(5px, 5px);
+
+            &:nth-child(2) {
+                stroke-dasharray: 436;
+                stroke-dashoffset: 436;
+            }
+        }
+    }
+}
+
+.progressbar2 {
+    svg {
+        circle {
+            &:nth-child(2) {
+                stroke-dashoffset: calc(436 - (436 * 50) / 100);
+                stroke: #21e051;
             }
         }
     }
